--- a/.github/workflows/postman-tests.yml
+++ b/.github/workflows/postman-tests.yml
@@ -21,4 +21,4 @@ jobs:
         run: npm install -g newman
 
       - name: Run Postman Collection
-        run: newman run Rick_and_Morty_API.postman_collection.json
+        run: newman run "Rick and Morty API.postman_collection.json"
